--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,58 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 1
+      Home
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
+  <!-- initial code
+    <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Tab 1</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  <app-explore-container name="Tab 1 page"></app-explore-container> 
+-->
+
+<ion-card>
+   <ion-img src="https://media-exp1.licdn.com/dms/image/C5103AQHmjmBoXPFE0w/profile-displayphoto-shrink_200_200/0?e=1600300800&v=beta&t=qzg_om5RMxJXgyC9JcApBjHeNNqZT1UCjDKTeCidiNk"></ion-img>
+   <ion-card-header>
+     <ion-card-title>Georgy's Activity</ion-card-title>
+   </ion-card-header>
+</ion-card>
+
+<ion-card>
+  <ion-img src="https://media-exp1.licdn.com/dms/image/C5103AQHmjmBoXPFE0w/profile-displayphoto-shrink_200_200/0?e=1600300800&v=beta&t=qzg_om5RMxJXgyC9JcApBjHeNNqZT1UCjDKTeCidiNk"></ion-img>
+  <ion-card-header>
+    <ion-card-title>Georgy's Activity</ion-card-title>
+  </ion-card-header>
+</ion-card>
+
+<ion-card>
+  <ion-img src="https://media-exp1.licdn.com/dms/image/C5103AQHmjmBoXPFE0w/profile-displayphoto-shrink_200_200/0?e=1600300800&v=beta&t=qzg_om5RMxJXgyC9JcApBjHeNNqZT1UCjDKTeCidiNk"></ion-img>
+  <ion-card-header>
+    <ion-card-title>Georgy's Activity</ion-card-title>
+  </ion-card-header>
+</ion-card>
+<ion-card>
+  <ion-img src="https://media-exp1.licdn.com/dms/image/C5103AQHmjmBoXPFE0w/profile-displayphoto-shrink_200_200/0?e=1600300800&v=beta&t=qzg_om5RMxJXgyC9JcApBjHeNNqZT1UCjDKTeCidiNk"></ion-img>
+  <ion-card-header>
+    <ion-card-title>Georgy's Activity</ion-card-title>
+  </ion-card-header>
+</ion-card>
+<ion-card>
+  <ion-img src="https://media-exp1.licdn.com/dms/image/C5103AQHmjmBoXPFE0w/profile-displayphoto-shrink_200_200/0?e=1600300800&v=beta&t=qzg_om5RMxJXgyC9JcApBjHeNNqZT1UCjDKTeCidiNk"></ion-img>
+  <ion-card-header>
+    <ion-card-title>Georgy's Activity</ion-card-title>
+  </ion-card-header>
+</ion-card>
+<ion-card>
+  <ion-img src="https://media-exp1.licdn.com/dms/image/C5103AQHmjmBoXPFE0w/profile-displayphoto-shrink_200_200/0?e=1600300800&v=beta&t=qzg_om5RMxJXgyC9JcApBjHeNNqZT1UCjDKTeCidiNk"></ion-img>
+  <ion-card-header>
+    <ion-card-title>Georgy's Activity</ion-card-title>
+  </ion-card-header>
+</ion-card>
 </ion-content>
