--- a/src/app/activity-detail/activity-detail.page.html
+++ b/src/app/activity-detail/activity-detail.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button> <!-- ionic back button '<--' -->
+    </ion-buttons>
     <ion-title>ActivityDetail</ion-title>
   </ion-toolbar>
 </ion-header>
