--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -22,11 +22,13 @@
   <ion-img src="https://media-exp1.licdn.com/dms/image/C5103AQHmjmBoXPFE0w/profile-displayphoto-shrink_200_200/0?e=1600300800&v=beta&t=qzg_om5RMxJXgyC9JcApBjHeNNqZT1UCjDKTeCidiNk"></ion-img>
   <ion-card-header>
     <ion-card-title>Georgy's Activity</ion-card-title>
-  </ion-card-header>
+  </ion-card-headser>
  </ion-card> 
 -->
  <!--routerLink creates new link to the application using activity (say 'activity-detail')-->
-  <ion-card routerLink="activity-detail" button *ngFor="let activity of (activityList | async)">
+ <!--using [routerLink]="['activity-detail', activity.id], activity.id creates '/id' page with activity-detail page -->
+  <ion-card [routerLink]="['activity-detail', activity.id]" button 
+  *ngFor="let activity of (activityList | async)">
    <ion-img [src]="activity.cropped"></ion-img>
    <ion-card-header>
      <ion-card-title>{{activity.name}}</ion-card-title>
