Implementing Detail Page Design [activity-detail]

--- a/src/app/activity-detail/activity-detail.page.html
+++ b/src/app/activity-detail/activity-detail.page.html
@@ -1,12 +1,23 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button></ion-back-button> <!-- ionic back button '<--' -->
+      <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title>ActivityDetail</ion-title>
+    <!-- <ion-title>Detail</ion-title> -->
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+   <ion-img [src] ="(activityDetail | async).image"></ion-img>
 
+   <ion-card no-margin>
+      <ion-card-header>
+        <ion-card-title>
+           {{(activityDetail | async).name}}
+        </ion-card-title>
+      </ion-card-header>
+      <ion-card-content>
+        {{(activityDetail | async).description}}
+      </ion-card-content>
+   </ion-card>
 </ion-content>
