Working with Lists | ion-list

--- a/src/app/activity-detail/activity-detail.page.html
+++ b/src/app/activity-detail/activity-detail.page.html
@@ -20,4 +20,32 @@
         {{(activityDetail | async).description}}
       </ion-card-content>
    </ion-card>
+
+   <!-- *********** Ion Lists ***********-->
+   <ion-card>
+      <ion-list lines="none"> <!-- by default ion-list have lines between the ion-item -->
+        <ion-item>
+           <ion-label>Duration</ion-label>
+           <ion-chip color="primary">
+             {{(activityDetail | async).duration}}
+            </ion-chip>
+        </ion-item>
+
+        <ion-item>
+          <ion-label>Category</ion-label>
+          <ion-chip color="primary">
+            {{(activityDetail | async).category}}
+          </ion-chip>
+        </ion-item>
+
+        <ion-item>
+          <ion-label>Popularity</ion-label>
+          <ion-chip color="primary">
+            {{(activityDetail | async).popularity}}
+          </ion-chip>
+        </ion-item>
+      </ion-list>
+   </ion-card>
+
+<!-- *********************************** -->
 </ion-content>
