Skeleton Component | ion-skeleton

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -25,6 +25,35 @@
   </ion-card-headser>
  </ion-card> 
 -->
+
+  <div *ngIf="activityList">
+      <!-- ion skeleton -->
+      <ion-card>
+        <ion-skeleton-text class="skeleton-image" animated></ion-skeleton-text>
+        <ion-card-header>
+          <ion-skeleton-text animated></ion-skeleton-text>
+          <ion-skeleton-text animated></ion-skeleton-text>
+        </ion-card-header>
+      </ion-card>
+    <!-- ***************** -->
+
+    <ion-card>
+      <ion-skeleton-text class="skeleton-image" animated></ion-skeleton-text>
+      <ion-card-header>
+        <ion-skeleton-text animated></ion-skeleton-text>
+        <ion-skeleton-text animated></ion-skeleton-text>
+      </ion-card-header>
+    </ion-card>
+
+    <ion-card>
+      <ion-skeleton-text class="skeleton-image" animated></ion-skeleton-text>
+      <ion-card-header>
+        <ion-skeleton-text animated></ion-skeleton-text>
+        <ion-skeleton-text animated></ion-skeleton-text>
+      </ion-card-header>
+    </ion-card>
+  </div>
+  
  <!--routerLink creates new link to the application using activity (say 'activity-detail')-->
  <!--using [routerLink]="['activity-detail', activity.id], activity.id creates '/id' page with activity-detail page -->
   <ion-card [routerLink]="['activity-detail', activity.id]" button 
