Modals and Fabs | ion-fab, ion-modal

--- a/src/app/activity-detail/activity-detail.page.html
+++ b/src/app/activity-detail/activity-detail.page.html
@@ -48,4 +48,11 @@
    </ion-card>
 
 <!-- *********************************** -->
+
+<!-- Ion Fabs -->
+  <ion-fab vertical ="top" horizontal="end" slot="fixed">
+    <ion-icon name="play"></ion-icon> <!--Play icon-->
+  </ion-fab>
+<!-- ******* -->
+
 </ion-content>
